--- a/store/blocks/search/search.jsonc
+++ b/store/blocks/search/search.jsonc
@@ -66,7 +66,8 @@
     "children": [
       "rich-text#category-title",
       "rich-text#category-description",
-      "flex-layout.row#filters-horizontal-bar",
+      "custom-filter-carousel",
+      // "flex-layout.row#filters-horizontal-bar",
       "flex-layout.row#navigationBar",
       // "flex-layout.row#fetchprevious",
       "flex-layout.row#products",
